[package]
name = "mdxjs"
version = "0.1.1"
authors = ["Titus Wormer <tituswormer@gmail.com>"]
edition = "2018"
rust-version = "1.56"
description = "Compile MDX to JavaScript in Rust."
homepage = "https://github.com/wooorm/mdxjs-rs"
repository = "https://github.com/wooorm/mdxjs-rs"
license = "MIT"
keywords = ["markdown", "mdx", "compile"]
categories = ["compilers", "text-processing"]
include = ["src/", "license"]

[features]
serializable = ["serde"]

[dependencies]
markdown = "1.0.0-alpha.3"
serde = { version = "1", optional = true }
swc_core = { git = "https://github.com/kwonoj/swc", rev = "56132118ef86ee30d565f6806f180e1a7cf75ce3" , features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
  "common",
] }

[dev-dependencies]
pretty_assertions = "1"
