[package]
name = "mdxjs"
version = "0.1.3"
authors = ["Titus Wormer <tituswormer@gmail.com>"]
edition = "2018"
rust-version = "1.56"
description = "Compile MDX to JavaScript in Rust."
homepage = "https://github.com/wooorm/mdxjs-rs"
repository = "https://github.com/wooorm/mdxjs-rs"
license = "MIT"
keywords = ["markdown", "mdx", "compile"]
categories = ["compilers", "text-processing"]
include = ["src/", "license"]

[features]
serializable = ["serde"]

[dependencies]
markdown = "1.0.0-alpha.4"
serde = { version = "1", optional = true }
swc_core = { git = "https://github.com/swc-project/swc.git", rev = "171733e8bb26e0ea7b88cba4279fecd243d0a440", features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
  "common",
] }

[dev-dependencies]
pretty_assertions = "1"
