[package]
name = "mdxjs"
version = "0.1.3"
authors = ["Titus Wormer <tituswormer@gmail.com>"]
edition = "2018"
rust-version = "1.56"
description = "Compile MDX to JavaScript in Rust."
homepage = "https://github.com/wooorm/mdxjs-rs"
repository = "https://github.com/wooorm/mdxjs-rs"
license = "MIT"
keywords = ["markdown", "mdx", "compile"]
categories = ["compilers", "text-processing"]
include = ["src/", "license"]

[features]
default = ["native-tls"]
native-tls = ["markdown/native-tls"]
rustls-tls = ["markdown/rustls-tls"]
serializable = ["serde"]

[dependencies]
markdown = { git = "https://github.com/kwonoj/markdown-rs.git", rev = "69b07b09249b93ed9a9cdc4a9584ba14ec0d201f", default-features = false }
serde = { version = "1", optional = true }
swc_core = { version = "0.44.0", features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
  "common",
] }

[dev-dependencies]
pretty_assertions = "1"
